# lance-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  cmake-format.py  rust-toolchain.toml
.github/workflows/: cpp-linter.yml  cpp.yml  pre-commit.yml  sanitizer_test.yml  test.yml
cmake_modules/: LanceSanitizer.cmake  ThirdpartyToolchain.cmake
cpp/: CMakeLists.txt  README.md
cpp/examples/: basic_usage.cpp
cpp/include/lance/: dataset.hpp  error.hpp  file.hpp  lance.hpp  scanner.hpp
cpp/lance-cpp-ffi/: Cargo.toml
cpp/lance-cpp-ffi/src/: dataset.rs  error.rs  file.rs  lib.rs  scanner.rs  types.rs
cpp/lance-ffi/: Cargo.toml
cpp/src/: dataset.cpp  file.cpp  lance-cpp-config.cmake.in  lib.cpp  scanner.cpp
cpp/tests/: file_test.cpp  test_file.cpp
examples/: CMakeLists.txt  basic_usage.cpp
include/lance/: dataset.hpp  export.hpp  result.hpp  version.hpp
lance-ffi/: CMakeLists.txt  Cargo.toml
lance-ffi/src/: dataset.rs  ffi_internal.hpp  lib.rs  utils.rs
src/: CMakeLists.txt  dataset.cpp  lance-cpp-config.cmake.in  lib.cpp  result.cpp
tests/: CMakeLists.txt  dataset_test.cpp  test_config.hpp.in
tests/util/: test_util.cpp  test_util.hpp
