[package]
name = "lance-cpp-crate"
version = "2.0.0-beta.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/lance-format/lance"
description = "C++ bindings for Lance Columnar format"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"

lance = { path = "../lance/rust/lance" }
lance-arrow = { path = "../lance/rust/lance-arrow" }
lance-core = { path = "../lance/rust/lance-core" }
lance-file = { path = "../lance/rust/lance-file" }
lance-io = { path = "../lance/rust/lance-io" }
lance-table = { path = "../lance/rust/lance-table" }
lance-encoding = { path = "../lance/rust/lance-encoding" }

arrow = { version = "56.1", features = ["ffi"] }
tokio = { version = "1.23", features = ["rt-multi-thread"] }

object_store = { version = "0.12.3" }
