[package]
name = "lance-cpp-ffi"
version = "0.31.0"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
lance = { version = "=0.31.0", path = "../../rust/lance" }
lance-core = { version = "=0.31.0", path = "../../rust/lance-core" }
lance-arrow = { version = "=0.31.0", path = "../../rust/lance-arrow" }
lance-file = { version = "=0.31.0", path = "../../rust/lance-file" }
lance-io = { version = "=0.31.0", path = "../../rust/lance-io" }
lance-table = { version = "=0.31.0", path = "../../rust/lance-table" }
lance-encoding = { version = "=0.31.0", path = "../../rust/lance-encoding" }

arrow = { version = "53.0.0", features = ["ffi"] }
arrow-array = "53.0.0"
arrow-schema = "53.0.0"
arrow-data = "53.0.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
once_cell = "1.19.0"
libc = "0.2"
